examples/test/testpolicy2404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2404
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key13: value37
      key4: value7
      key5: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value8
          key12: value28
          key15: value45
      podSelector:
        matchLabels:
          key39: value18
